# Qworld

./: .gitignore  LICENSE  README.md  evaluate_criteria.py  pyproject.toml  test_pipeline.py  test_providers.py
.github/workflows/: tests.yml
qworld/: __init__.py  __main__.py  agents.py  client.py  prompts.py  schemas.py
skills/qworld-criteria-generation/: SKILL.md
tests/: test_cli_input_normalization.py  test_client_input_normalization.py
